--- a/config.json
+++ b/config.json
@@ -1,12 +1,23 @@
 {
     "enabled": true,
-    "chatId": "4991225150",
-    "keywords": ["asdassada"],
+    "chatId": 4991225150,
+    "keywords": [
+        "snowboard",
+        "snowboarding",
+        "learn snowboard",
+        "learn snowboarding",
+        "snowboard lessons",
+        "snowboard instructor",
+        "snowboard coach",
+        "beginner snowboard",
+        "first time snowboarding",
+        "go snowboarding"
+    ],
     "templates": [
-        "Hi! I'm a snowboard instructor 🏂",
-        "Hey! I offer private snowboard lessons ❄️",
-        "Hi! I'm a snowboard instructor 🏂",
-        "Hey! I offer private snowboard lessons ❄️"
+        "Hi! 👋 I noticed your message in the chat. I'm a snowboard instructor 🏂 and offer private lessons. Feel free to message me 🙂",
+        "Hey! ❄️ Saw that you're interested in snowboarding. I help beginners and improve technique. Happy to answer questions!",
+        "Hi there! 🏂 I work as a snowboard coach and do private lessons. Let me know if you'd like details!",
+        "Hey! If you're looking to learn or improve your snowboarding, I can help 🙂"
     ],
     "dailyLimit": 10,
     "delay": {
