--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "node index.js",
+        "dev:client": "node src/index.js",
+        "dev:bot": "node src/control-bot.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -24,8 +25,10 @@
         "fs": "^0.0.1-security",
         "input": "^1.0.1",
         "node-telegram-bot-api": "^0.67.0",
+        "path": "^0.12.7",
         "prebuilt-tdlib": "^0.1008058.0",
         "tdl": "^8.0.2",
-        "telegram": "^2.26.22"
+        "telegram": "^2.26.22",
+        "url": "^0.11.4"
     }
 }
