--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "homepage": "https://github.com/IvanDeresh/ski-chat#readme",
     "dependencies": {
         "dotenv": "^17.2.3",
+        "express": "^5.2.1",
         "fs": "^0.0.1-security",
         "input": "^1.0.1",
         "path": "^0.12.7",
